--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +18,7 @@
   },
   "homepage": "https://github.com/iamshaunjp/complete-mongodb#readme",
   "dependencies": {
-    "express": "^4.17.3",
-    "mongodb": "^4.4.1"
+    "express": "^4.18.2",
+    "mongodb": "^4.13.0"
   }
 }
